# minrpc

./: .travis.yml  CHANGES.rst  COPYING.GPLv3.rst  README.rst  setup.cfg  setup.py
.github/workflows/: main.yml
minrpc/: __init__.py  client.py
src/minrpc/: client.py  connection.py  ipc.py  posix.py  service.py  windows.py
test/: test_rpc.py
