[metadata]
name             = minrpc
version          = 0.0.10
description      = Minimalistic RPC utility (DO NOT USE!)
url              = https://github.com/hibtc/minrpc
long_description = file: README.rst, COPYING.rst, CHANGES.rst
author           = Thomas Gläßle
author_email     = t_glaessle@gmx.de
license          = GPLv3+
license_file     = COPYING.rst
classifiers      =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
long_description_content_type = text/x-rst

[options]
packages = minrpc
zip_safe = true
include_package_data = true
python_requires = >=2.7

[bdist_wheel]
universal = true

[flake8]
#   ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,W504,W505
#   max-line-length = 79
# Of these, we only disrespect the rules:
# - E126 continuation line over-indented for hanging indent
# - E226 missing whitespace around arithmetic operator
# - E241 multiple spaces after ':' [or ',']
# - W503 line break before binary operator
# - W504 line break after binary operator
# Additionally, we disrespect:
# - E501 line too long [extended from 79 to 84]
# - E731 do not assign a lambda expression, use a def
# - E741 ambiguous variable name 'l' [or 'I', or 'O']
# Differing from the default, we currently follow and don't ignore:
# - E121 continuation line under-indented for hanging indent
# - E123 closing bracket does not match indentation of opening bracket’s line
# - E133 closing bracket is missing indentation
# - E242 tab after ‘,’
# - E704 multiple statements on one line (def)
# - W505 doc line too long (82 > 79 characters)
# Our maximum line length is designed to exactly fit two terminals side-by-side
# on my laptop screen and because the default is too small in so many cases.
ignore = E126,E226,E241,E731,E741,W503,W504
exclude = .git,__pycache__,doc/conf.py,build,dist
max-line-length = 84

[coverage:paths]
# when running `coverage combine`, replace these paths by `minrpc/`, see:
# https://coverage.readthedocs.io/en/latest/config.html#paths
source =
    minrpc/
    */site-packages/minrpc-*.egg/minrpc/
    */site-packages/minrpc/
